# microblogs

./: .env_template  Dockerfile  README.md  alembic.ini  commands.txt  docker-compose.yaml  index.html  main.py  nginx.conf  pyproject.toml  requirements.txt
app/: add_data.py  api_router.py  base_models.py  base_router.py  basic_schema.py  config.py  db_helper.py  error_handling.py  functions.py
migration/: env.py
migration/versions/: 89180fb7d0f4_correct_table.py  b8a3e3a6be98_create_table.py
tests/: conftest.py  test_app.py  test_data.py
