[tool.poetry]
name = "python-advanced-diploma"
version = "0.1.0"
description = ""
authors = ["natalia_levant <an_smir@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["all"], version = "^2.0.36"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
alembic = {extras = ["all"], version = "^1.13.3"}
black = "^24.10.0"
asyncpg = "^0.30.0"
uvicorn = {extras = ["all"], version = "^0.32.0"}
fastapi = "^0.115.4"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
extend-exclude = '''
(
migration
)
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migration/*", "**/settings/*", "alembic"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = ["context.pyi"]

[[tool.mypy.overrides]]
module = "linter_project.config.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "config.config"
ignore_errors = true
